# ams-background-tasks

./: .airflowignore  .gitignore  .pylintrc  DAG.py  Makefile  README.md  common.py  docker-compose.yaml  pyproject.toml  secrets.sh  setup.cfg
ams_background_tasks/: __init__.py  database_utils.py  ftp_utils.py  log.py  municipalities_groups.py  update_ibama_risk.py  utils.py
ams_background_tasks/airflow/common/: biomes.py  env.py  secrets.py  tasks.py  vars.py
ams_background_tasks/airflow/dags/: calculate_land_use_area.py  create_db.py  finalize_prodes.py  process_fire_spreading_risk.py  update_prodes.py
ams_background_tasks/airflow/tasks/: active_fires.py  active_fires_today.py  biomes.py  classification.py  db.py  deter.py  fire_spreading_risk.py  mailer.py  prodes.py  risk.py  spatial_units.py
ams_background_tasks/tools/: ams_create_db.py  ams_update_municipalities.py  calculate_land_use_area.py  classify_by_land_use.py  common.py  copy_classification_to_final_tables.py  copy_deter_to_final_tables.py  copy_prodes_to_ams_tables.py  create_db.py  download_fire_spreading_risk_file.py  download_ibama_risk_file.py  download_inpe_risk_file.py  download_risk_file.py  drop_temp_tables.py  import_fire_spreading_risk_file.py  import_municipalities_group.py  indicators.py  need_update_indicator.py  prepare_classification.py  print_process_status.py  process_fire_spreading_risk_file.py  prodes_utils.py  risk_utils.py  sample.py  update_active_fires_table.py  update_active_fires_today.py  update_biome_border_table.py  update_biome_table.py  update_deter_table.py  update_ibama_risk.py  update_inpe_risk.py  update_municipalities_table.py  update_prodes.py  update_spatial_units_table.py
dags/: __init__.py  ams_create_db.py  common.py  create_db.py  load_vars.py  sample.py  sample_dag.py
land_use/: .gitgnore  README
notebooks/: import_cells_from_shapefile.ipynb  update_auxiliary.ipynb  validation.ipynb
