[metadata]
name = ams-background-tasks
description = TerraBrasilis AMS - Background Tasks
version = 0.0.0
url = https://github.com/terrabrasilis/ams-background-tasks

[options]
python_requires = ==3.9.19
packages = find:
install_requires =
    apache-airflow>=2.9.2
    pydantic
    pylint
    importlib-metadata<=7.1
    cachelib<0.10.0
    werkzeug<2.3
    click
    psycopg2-binary
    rasterio
    geopandas
    sqlalchemy
    shapely
    numpy
    pandas
    alive-progress


[options.extras_require]
dev =
    pylint
    isort
    black    

[options.entry_points]
console_scripts =
    sample-tool = ams_background_tasks.tools.sample:main
    ams-create-db = ams_background_tasks.tools.create_db:main
    ams-update-municipalities = ams_background_tasks.tools.update_municipalities_table:main
    ams-update-active-fires = ams_background_tasks.tools.update_active_fires_table:main
    ams-update-deter = ams_background_tasks.tools.update_deter_table:main
    ams-classify-deter-by-land-use = ams_background_tasks.tools.classify_deter_by_land_use:main

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
