[metadata]
name = ams-background-tasks
description = TerraBrasilis AMS - Background Tasks
version = 0.0.0
url = https://github.com/terrabrasilis/ams-background-tasks

[options]
python_requires = >=3.9.19
packages = find:
install_requires =
    apache-airflow>=2.9.2
    pydantic
    pylint
    importlib-metadata<=7.1
    cachelib<0.10.0
    werkzeug<2.3
    click
    psycopg2-binary
    rasterio
    geopandas
    sqlalchemy
    shapely
    numpy
    pandas
    alive-progress


[options.extras_require]
dev =
    pylint
    isort
    black    

[options.entry_points]
console_scripts =
    sample-tool = ams_background_tasks.tools.sample:main
    ams-create-db = ams_background_tasks.tools.create_db:main
    ams-update-spatial-units = ams_background_tasks.tools.update_spatial_units_table:main
    ams-update-biome = ams_background_tasks.tools.update_biome_table:main
    ams-update-active-fires = ams_background_tasks.tools.update_active_fires_table:main
    ams-update-deter = ams_background_tasks.tools.update_deter_table:main
    ams-classify-by-land-use = ams_background_tasks.tools.classify_by_land_use:main
    ams-finalize-classification = ams_background_tasks.tools.copy_classification_to_final_tables:main
    ams-import-municipalities-group = ams_background_tasks.tools.import_municipalities_group:main
    ams-prepare-classification = ams_background_tasks.tools.prepare_classification:main

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
