[metadata]
name = ams-background-tasks
description = TerraBrasilis AMS - Background Tasks
version = 0.0.0
url = https://github.com/terrabrasilis/ams-background-tasks

[options]
python_requires = >=3.9.19
packages = find:
install_requires =
    apache-airflow>=2.9.2
    pydantic
    pylint
    importlib-metadata<=7.1
    cachelib<0.10.0
    werkzeug<2.3
    click
    psycopg2-binary
    rasterio
    geopandas==1.0.1
    sqlalchemy
    shapely
    numpy==1.24.4
    pandas==2.2.3
    alive-progress
    aioftp
    geoalchemy2
    beautifulsoup4


[options.extras_require]
dev =
    pylint
    isort
    black    

[options.entry_points]
console_scripts =
    sample-tool = ams_background_tasks.tools.sample:main
    ams-create-db = ams_background_tasks.tools.create_db:main
    ams-update-spatial-units = ams_background_tasks.tools.update_spatial_units_table:main
    ams-update-biome = ams_background_tasks.tools.update_biome_table:main
    ams-update-active-fires = ams_background_tasks.tools.update_active_fires_table:main
    ams-update-active-fires-today = ams_background_tasks.tools.update_active_fires_today:main
    ams-update-deter = ams_background_tasks.tools.update_deter_table:main
    ams-finalize-deter-update = ams_background_tasks.tools.copy_deter_to_final_tables:main
    ams-classify-by-land-use = ams_background_tasks.tools.classify_by_land_use:main
    ams-finalize-classification = ams_background_tasks.tools.copy_classification_to_final_tables:main
    ams-import-municipalities-group = ams_background_tasks.tools.import_municipalities_group:main
    ams-prepare-classification = ams_background_tasks.tools.prepare_classification:main
    ams-download-ibama-risk-file = ams_background_tasks.tools.download_ibama_risk_file:main
    ams-download-inpe-risk-file = ams_background_tasks.tools.download_inpe_risk_file:main
    ams-update-ibama-risk = ams_background_tasks.tools.update_ibama_risk:main
    ams-update-inpe-risk = ams_background_tasks.tools.update_inpe_risk:main
    ams-calculate-land-use-area = ams_background_tasks.tools.calculate_land_use_area:main
    ams-need-update-indicator = ams_background_tasks.tools.need_update_indicator:main
    ams-print-process-status = ams_background_tasks.tools.print_process_status:main
    ams-drop-temp-tables = ams_background_tasks.tools.drop_temp_tables:main
    ams-download-fire-spreading-risk-file = ams_background_tasks.tools.download_fire_spreading_risk_file:main
    ams-import-fire-spreading-risk-file = ams_background_tasks.tools.import_fire_spreading_risk_file:main
    ams-process-fire-spreading-risk-file = ams_background_tasks.tools.process_fire_spreading_risk_file:main

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
